<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/dag_camera_title"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/iv_separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/tv_title"
        android:background="@color/colorAccent"/>

    <TextView
        android:id="@+id/tv_takePhoto"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_separator"
        android:padding="10dp"
        android:text="@string/tv_takePhoto"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/tv_choosePhoto"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_takePhoto"
        android:layout_alignLeft="@id/tv_takePhoto"
        android:padding="10dp"
        android:text="@string/tv_choosePhoto"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"/>

</android.widget.RelativeLayout>