<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".CreatingActivity">

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tv_time"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        android:hint="@string/et_titleHint"/>

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/et_title"
        android:layout_below="@id/et_title"
        android:textSize="14sp"
        android:hint="@string/et_contentHint"/>

    <ImageView
        android:id="@+id/iv_clockIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/clock"
        android:layout_below="@id/et_content"/>

    <TextView
        android:id="@+id/tv_alarmCreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/iv_clockIcon"
        android:layout_alignTop="@id/iv_clockIcon"
        android:layout_marginTop="10dp"
        android:text="@string/tv_alarmCreator"
        android:textSize="14sp"
        android:textColor="@color/colorPurple"
        android:textStyle="bold" />

</android.widget.RelativeLayout>