<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".EditingActivity">

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/iv_photo"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="12sp"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tv_time"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        android:hint="@string/et_titleHint"/>

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/et_title"
        android:layout_below="@id/et_title"
        android:textSize="14sp"
        android:hint="@string/et_contentHint"/>

    <ImageView
        android:id="@+id/iv_clockIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_clock"
        android:layout_below="@id/et_content"/>

    <TextView
        android:id="@+id/tv_alarmCreator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/iv_clockIcon"
        android:layout_alignTop="@id/iv_clockIcon"
        android:layout_marginTop="10dp"
        android:text="@string/tv_alarmCreator"
        android:textSize="14sp"
        android:textColor="@color/colorLightGreen"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/sp_dmyPicker"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignTop="@id/iv_clockIcon"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/iv_clockIcon"
        android:background="@color/colorRedGray"
        android:visibility="gone"/>

    <Spinner
        android:id="@+id/sp_hmPicker"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="@color/colorRedGray"
        android:layout_toRightOf="@id/sp_dmyPicker"
        android:layout_alignTop="@id/sp_dmyPicker"
        android:layout_marginLeft="10dp"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/iv_setterClose"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_toRightOf="@id/sp_hmPicker"
        android:layout_alignTop="@id/sp_hmPicker"
        android:background="@drawable/ic_close"
        android:visibility="gone"/>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bnv_bottomMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/editingactivity_bottommenu"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@color/colorLightGreen"
        app:itemTextColor="@color/colorLightGreen"/>

</android.widget.RelativeLayout>